# mpi

./: CMakeLists.txt  integral.c  integral.cpp  matrix.c  message.c  montecarlo.c  montekarlo.c  sort.c
